--- a/docs/04-vision-language-action/03-cognitive-planning-llm-to-ros.mdx
+++ b/docs/04-vision-language-action/03-cognitive-planning-llm-to-ros.mdx
@@ -1,6 +1,6 @@
 ---
 id: cognitive-planning-llm-to-ros
-title: Cognitive Planning: LLM to ROS Actions
+title: "Cognitive Planning: LLM to ROS Actions"
 ---
 
 # Cognitive Planning: LLM to ROS Actions
