--- a/docs/04-vision-language-action/04-capstone-autonomous-humanoid.mdx
+++ b/docs/04-vision-language-action/04-capstone-autonomous-humanoid.mdx
@@ -1,6 +1,6 @@
 ---
 id: capstone-autonomous-humanoid
-title: Capstone Project: Autonomous Humanoid
+title: "Capstone Project: Autonomous Humanoid"
 ---
 
 # Capstone Project: Autonomous Humanoid
