--- a/docs/02-digital-twin-simulation/03-physics-sensor-simulation.mdx
+++ b/docs/02-digital-twin-simulation/03-physics-sensor-simulation.mdx
@@ -39,7 +39,7 @@ Accurate sensor simulation is essential for developing perception algorithms tha
 | **RGB Camera** | Basler acA1920-40uc | N/A | 1920×1200 | Color accurate | 30-60Hz | Visual perception, object recognition |
 | **IMU** | Bosch BNO055 | N/A | 3-axis | 0.5° orientation | 100Hz | Balance, orientation, motion |
 | **Force/Torque** | ATI Gamma SI-200 | ±200N/20Nm | 16-bit | 0.03% of range | 1kHz | Manipulation, contact sensing |
-| **Joint Encoders** | Absolute | N/A | 12-16 bit | <0.1° | 1kHz | Joint position feedback |
+| **Joint Encoders** | Absolute | N/A | 12-16 bit | &lt;0.1° | 1kHz | Joint position feedback |
 
 ## Implementing Sensors in Gazebo
 
